[REFACTOR] given when then 주석 작성